aire_de_jeux/src/main/java/com/example/aire_de_jeux/errors/ResourceNotFoundException.java
package com.example.aire_de_jeux.errors;

public class ResourceNotFoundException extends RuntimeException {
    public ResourceNotFoundException(String message) {
        super(message);
    }
}
